--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -1,7 +1,7 @@
 ---
-import { GitHubLogo } from "@terrazzo/icons";
-import DocsSearch from "./SearchBox.tsx";
-import ThemeSwitcher from "./ThemeSwitcher.tsx";
+import { GitHubLogo } from '@terrazzo/icons';
+import DocsSearch from './SearchBox.tsx';
+import ThemeSwitcher from './ThemeSwitcher.tsx';
 ---
 
 <header class="header-nav">
