--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -1,6 +1,6 @@
 ---
-import { getAriaCurrent } from "../lib/navigation";
-import Terrazzo from "./terrazzo.astro";
+import { getAriaCurrent } from '../lib/navigation';
+import Terrazzo from './terrazzo.astro';
 
 const NAV_ITEMS = [
   // {
@@ -8,37 +8,37 @@ const NAV_ITEMS = [
   //   items: [{ url: "/token-lab", title: "Coming Soon!" }],
   // },
   {
-    title: "Guides",
+    title: 'Guides',
     items: [
-      { url: "/guides/dtcg", title: "DTCG Tokens" },
-      { url: "/guides/modes", title: "Modes + Theming" },
-      { url: "/guides/styleguide", title: "DS Styleguide" },
+      { url: '/guides/dtcg', title: 'DTCG Tokens' },
+      { url: '/guides/modes', title: 'Modes + Theming' },
+      { url: '/guides/styleguide', title: 'DS Styleguide' },
     ],
   },
   {
-    title: "CLI",
+    title: 'CLI',
     items: [
-      { url: "/cli", title: "Intro" },
-      { url: "/cli/config", title: "Config" },
-      { url: "/cli/migrating", title: "Migrating from Cobalt" },
+      { url: '/cli', title: 'Intro' },
+      { url: '/cli/config', title: 'Config' },
+      { url: '/cli/migrating', title: 'Migrating from Cobalt' },
       {
-        title: "Integrations",
-        url: "/cli/integrations",
+        title: 'Integrations',
+        url: '/cli/integrations',
         items: [
-          { url: "css", title: "CSS" },
-          { url: "sass", title: "Sass" },
-          { url: "js", title: "JS/TS" },
-          { url: "swift", title: "Swift" },
-          { url: "tailwind", title: "Tailwind" },
-          { url: "custom", title: "Custom" },
+          { url: 'css', title: 'CSS' },
+          { url: 'sass', title: 'Sass' },
+          { url: 'js', title: 'JS/TS' },
+          { url: 'swift', title: 'Swift' },
+          { url: 'tailwind', title: 'Tailwind' },
+          { url: 'custom', title: 'Custom' },
         ],
       },
       {
-        url: "/cli/api",
-        title: "API",
+        url: '/cli/api',
+        title: 'API',
         items: [
-          { url: "plugin-development", title: "Plugin Development" },
-          { url: "js", title: "JS API" },
+          { url: 'plugin-development', title: 'Plugin Development' },
+          { url: 'js', title: 'JS API' },
         ],
       },
     ],
@@ -52,10 +52,10 @@ const NAV_ITEMS = [
   //   ],
   // },
   {
-    title: "Reference",
+    title: 'Reference',
     items: [
-      { url: "/reference/tokens", title: "Token Types" },
-      { url: "/reference/about", title: "About the Project" },
+      { url: '/reference/tokens', title: 'Token Types' },
+      { url: '/reference/about', title: 'About the Project' },
     ],
   },
 ];
