--- a/www/src/components/main-footer.astro
+++ b/www/src/components/main-footer.astro
@@ -1,6 +1,6 @@
 ---
-import { GitHubLogo } from "@terrazzo/icons";
-import Terrazzo from "./terrazzo.astro";
+import { GitHubLogo } from '@terrazzo/icons';
+import Terrazzo from './terrazzo.astro';
 ---
 
 <footer class="footer">
