--- a/www/src/components/terrazzo.astro
+++ b/www/src/components/terrazzo.astro
@@ -3,7 +3,7 @@ export interface Props {
   size?: string;
 }
 
-const { size = "1em" } = Astro.props;
+const { size = '1em' } = Astro.props;
 ---
 
 <svg
