--- a/www/src/layouts/default.astro
+++ b/www/src/layouts/default.astro
@@ -1,7 +1,7 @@
 ---
-import HeadMeta from "../components/head-meta.astro";
-import MainFooter from "../components/main-footer.astro";
-import MainNav from "../components/main-nav.astro";
+import HeadMeta from '../components/head-meta.astro';
+import MainFooter from '../components/main-footer.astro';
+import MainNav from '../components/main-nav.astro';
 
 const { title, description, socialImage } = Astro.props;
 ---
