--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import DefaultLayout from "../layouts/default.astro";
-import Tri from "../components/tri.astro";
-import IlloHome from "../components/illo/home.astro";
-import MainFooter from "../components/main-footer.astro";
-import { ButtonLink } from "@terrazzo/tiles";
+import DefaultLayout from '../layouts/default.astro';
+import Tri from '../components/tri.astro';
+import IlloHome from '../components/illo/home.astro';
+import MainFooter from '../components/main-footer.astro';
+import { ButtonLink } from '@terrazzo/tiles';
 ---
 
 <DefaultLayout>
