--- a/www/src/components/main-nav.astro
+++ b/www/src/components/main-nav.astro
@@ -1,15 +1,10 @@
 ---
-import { GitHubLogo } from "@terrazzo/icons";
-import { ButtonLink } from "@terrazzo/tiles";
-import fs from "node:fs";
-import Terrazzo from "./terrazzo.astro";
+import { GitHubLogo } from '@terrazzo/icons';
+import { ButtonLink } from '@terrazzo/tiles';
+import fs from 'node:fs';
+import Terrazzo from './terrazzo.astro';
 
-const pkgInfo = JSON.parse(
-  fs.readFileSync(
-    new URL("../../../packages/cli/package.json", import.meta.url),
-    "utf8"
-  )
-);
+const pkgInfo = JSON.parse(fs.readFileSync(new URL('../../../packages/cli/package.json', import.meta.url), 'utf8'));
 const { version } = pkgInfo;
 ---
 
