--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -1,5 +1,6 @@
 ---
 import { getAriaCurrent } from '../lib/navigation';
+import Terrazzo from './terrazzo.astro';
 
 const NAV_ITEMS = [
   // {
@@ -42,14 +43,14 @@ const NAV_ITEMS = [
       },
     ],
   },
-  {
-    title: 'Components',
-    items: [
-      { url: '/components/color-picker', title: 'ColorPicker' },
-      { url: '/components/demo', title: 'Demo' },
-      { url: '/components/slider', title: 'Slider' },
-    ],
-  },
+  // {
+  //   title: "Components",
+  //   items: [
+  //     { url: "/components/color-picker", title: "ColorPicker" },
+  //     { url: "/components/demo", title: "Demo" },
+  //     { url: "/components/slider", title: "Slider" },
+  //   ],
+  // },
   {
     title: 'Reference',
     items: [
@@ -61,43 +62,7 @@ const NAV_ITEMS = [
 ---
 
 <div class="sidenav">
-  <a class="logo-link" href="/docs"
-    ><svg
-      class="logo"
-      fill="none"
-      viewBox="0 0 121 24"
-      xmlns="http://www.w3.org/2000/svg"
-      ><path
-        d="m19.9333 21.792s0 1.5596-1.7302 1.5596h-16.47285c-1.73025 0-1.73025-1.5596-1.73025-1.5596z"
-        fill="#8cd10c"></path><g fill="var(--tz-color-content-text)"
-        ><path
-          d="m8.9733.5h-8.747783c-.124035 0-.225517.101495-.225517.225544v8.748856c0 .20074.24243.3011.384506.15901l8.748914-8.748857c.14207-.142093.04172-.384553-.15899-.384553z"
-        ></path><path
-          d="m19.9334 9.4744v-8.748856c0-.124049-.1015-.225544-.2255-.225544h-8.7489c-.2007 0-.3011.24246-.159.384553l8.7488 8.748857c.1421.14209.3846.04173.3846-.15901z"
-        ></path><path
-          d="m10.959 20.4333h8.7489c.124 0 .2255-.1015.2255-.2255v-8.7489c0-.2007-.2425-.3011-.3846-.159l-8.7488 8.7489c-.1421.1421-.0417.3845.159.3845z"
-        ></path><path
-          d="m8.9744 20.4333h-8.748856c-.124049 0-.225544-.1015-.225544-.2255v-8.7489c0-.2007.24246-.3011.384553-.159l8.748857 8.7489c.14209.1421.04173.3845-.15901.3845z"
-        ></path><path
-          d="m36.6995 10.162h-1.6973v-2.78242h1.6973v-3.15351h3.1622v3.15351h2.5345v2.78242h-2.5345v5.7458c0 .1121.0908.2026.2032.2026h2.2335v2.9091h-3.5971c-1.1053 0-2.0018-.8941-2.0018-1.9963z"
-        ></path><path
-          d="m43.7026 13.1999c0-3.59428 2.3949-6.21443 5.9061-6.21443 3.5113 0 5.6038 2.34163 5.6038 5.98253 0 .3941-.023.7186-.0698 1.1127h-8.4168c.2792 1.5304 1.3489 2.6201 2.9296 2.6201 1.2554 0 2.2091-.603 2.7202-1.7393l2.5813 1.1823c-1.0229 2.1564-2.9527 3.2461-5.3713 3.2461-3.4875 0-5.8824-2.5742-5.8824-6.1914zm8.5796-1.2986c-.3023-1.3912-1.1856-2.29568-2.6742-2.29568-1.4885 0-2.4178.95048-2.79 2.29568z"
-        ></path><path
-          d="m56.6411 7.37953h3.0693c0 .62597 0 1.13635-.0468 1.76232l.1627.02297c.6507-1.32156 1.7902-1.87789 3.0225-1.87789.2095 0 .4182.02297.6507.06963v2.85204h-1.1157c-1.6973 0-2.6043 1.0437-2.6043 2.7823v6.0285h-3.1391v-11.63987z"
-        ></path><path
-          d="m64.7031 7.37953h3.0693c0 .62597 0 1.13635-.0468 1.76232l.1627.02297c.6507-1.32156 1.7902-1.87789 3.0225-1.87789.2095 0 .4183.02297.6508.06963v2.85204h-1.1158c-1.6973 0-2.6043 1.0437-2.6043 2.7823v6.0285h-3.1391v-11.63987z"
-        ></path><path
-          d="m72.2937 13.1998c0-3.45496 2.0695-6.07511 5.2547-6.07511 1.5116 0 2.6971.62597 3.5343 1.97121l.1627-.02298c-.0468-.58001-.0468-1.0897-.0468-1.69269h3.0923v11.64057h-3.0923c0-.6489 0-1.0667.0468-1.6927l-.1627-.0466c-.8602 1.3912-2.1623 2.0172-3.6502 2.0172-3.1391 0-5.1388-2.7128-5.1388-6.0982zm8.9286 0c0-1.9245-1.1394-3.26975-2.9296-3.26975s-2.8599 1.41415-2.8599 3.26975c0 1.8557 1.0927 3.2698 2.8599 3.2698 1.7671 0 2.9296-1.3452 2.9296-3.2698z"
-        ></path><path
-          d="m85.5637 18.8579 5.5801-8.7419h-4.8826v-2.73642h9.7658l.0698.13926-5.6038 8.74196h5.511v2.7594h-10.3705z"
-        ></path><path
-          d="m96.5789 18.8579 5.5801-8.7419h-4.8826v-2.73642h9.7656l.07.13926-5.604 8.74196h5.511v2.7594h-10.3703z"
-        ></path><path
-          d="m107.75 13.1999c0-3.59428 2.464-6.21443 6.045-6.21443 3.58 0 6.046 2.59717 6.046 6.19143 0 3.5943-2.465 6.2144-6.046 6.2144s-6.045-2.5972-6.045-6.1914zm8.998-.023c0-1.8779-1.139-3.38537-2.952-3.38537-1.814 0-2.953 1.50747-2.953 3.40837 0 1.9008 1.116 3.3853 2.953 3.3853 1.836 0 2.952-1.5074 2.952-3.4083z"
-        ></path></g
-      ></svg
-    ></a
-  >
+  <a class="logo-link" href="/"><Terrazzo size="1.25rem" /></a>
 
   <nav class="nav" aria-label="Table of Contents">
     {
@@ -110,7 +75,12 @@ const NAV_ITEMS = [
               return (
                 <li class="nav-item">
                   {item.items ? (
-                    <details class="details" open={!!getAriaCurrent(url, Astro.request.url) || undefined}>
+                    <details
+                      class="details"
+                      open={
+                        !!getAriaCurrent(url, Astro.request.url) || undefined
+                      }
+                    >
                       <summary class="summary">
                         <a
                           class="nav-link"
@@ -161,10 +131,11 @@ const NAV_ITEMS = [
 
 <style>
   .sidenav {
-    --grid: var(--tz-space-500);
+    --grid: calc(0.5 * var(--grid-size));
 
-    background: var(--tz-color-content-bg-aside);
-    color: var(--tz-color-content-text-aside);
+    background: var(--tz-color-bg-1);
+    border-right: var(--tz-border-2);
+    color: var(--tz-color-text-2);
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -199,7 +170,7 @@ const NAV_ITEMS = [
   }
 
   .section-title {
-    color: var(--tz-color-content-text);
+    color: var(--tz-color-text-1);
     font-size: var(--tz-typography-300-medium-font-size);
     font-weight: var(--tz-typography-300-medium-font-weight);
     line-height: var(--tz-typography-300-medium-line-height);
@@ -209,7 +180,7 @@ const NAV_ITEMS = [
   .nav-link,
   .nav-sublink {
     align-items: center;
-    color: var(--tz-color-content-text);
+    color: var(--tz-color-text-1);
     display: flex;
     font-size: var(--tz-typography-200-regular-font-size);
     height: var(--tz-space-control-s);
@@ -218,8 +189,8 @@ const NAV_ITEMS = [
     position: relative;
 
     &::before {
-      background-color: var(--tz-color-base-lime-400);
-      content: '';
+      background-color: var(--tz-color-base-lime-600);
+      content: "";
       display: block;
       left: var(--tz-space-300);
       height: 100%;
@@ -231,11 +202,11 @@ const NAV_ITEMS = [
     }
 
     &:hover::before {
-      opacity: 0.5
+      opacity: 0.5;
     }
 
     &[aria-current="page"] {
-      color: var(--tz-color-control-text-selected);
+      color: var(--tz-color-base-lime-300);
 
       &::before {
         opacity: 1;
