--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -1,15 +1,20 @@
 ---
-import '@terrazzo/tokens/dist/index.css';
-import '@terrazzo/fonts/fragment-mono.css';
-import '@terrazzo/fonts/instrument-sans.css';
-import '@terrazzo/tiles/dist/all-components.css';
-import '@terrazzo/react-color-picker/dist/all-components.css';
-import '../styles/app.css';
+import "@terrazzo/tokens/dist/index.css";
+import "@terrazzo/fonts/fragment-mono.css";
+import "@terrazzo/fonts/instrument-sans.css";
+import "@terrazzo/tiles/dist/all-components.css";
+import "@terrazzo/react-color-picker/dist/all-components.css";
+import "../styles/app.css";
 
-const { title, description, socialImage } = Astro.props;
+const {
+  title,
+  description = "Design systems for everyone. MIT Licensed tools for developing and managing design systems. Use the W3C design token format to build multi-platform apps quickly and easily.",
+  socialImage,
+} = Astro.props;
 ---
 
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>
   {
     title
