--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -6,10 +6,15 @@ import '@terrazzo/tiles/dist/all-components.css';
 import '@terrazzo/react-color-picker/dist/all-components.css';
 import '../styles/app.css';
 
-const { title, description, socialImage } = Astro.props;
+const {
+  title,
+  description = 'Design systems for everyone. MIT Licensed tools for developing and managing design systems. Use the W3C design token format to build multi-platform apps quickly and easily.',
+  socialImage,
+} = Astro.props;
 ---
 
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>
   {
     title
@@ -18,5 +23,6 @@ const { title, description, socialImage } = Astro.props;
   }
 </title>
 <link rel="icon" href="/favicon.svg" />
+<link rel="canonical" href={`${Astro.site?.origin}${Astro.url.pathname}`} />
 <meta name="description" content={description} />
 {socialImage && <meta name="og:image" content={socialImage} />}
