--- a/www/src/components/main-footer.astro
+++ b/www/src/components/main-footer.astro
@@ -100,6 +100,7 @@ import Terrazzo from './terrazzo.astro';
   .cat-heading {
     font-family: var(--tz-typography-family-mono);
     font-size: var(--tz-typography-200-regular-font-size);
+    font-weight: var(--tz-typography-200-regular-font-weight);
     letter-spacing: calc(1 / 8 * 1em);
     margin: 0;
     opacity: 0.7;
