--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -91,6 +91,9 @@
 
   strong,
   b {
+    font-variation-settings: var(
+      --tz-typography-300-bold-font-variation-settings
+    );
     font-weight: var(--tz-typography-300-bold-font-weight);
   }
 
@@ -155,6 +158,9 @@
     border-bottom: 1px solid transparent;
     cursor: pointer;
     display: flex;
+    font-variation-settings: var(
+      --tz-typography-300-medium-font-variation-settings
+    );
     font-weight: var(--tz-typography-300-medium-font-weight);
     min-height: var(--tz-space-800);
     position: relative;
@@ -200,7 +206,10 @@
 
   th {
     border-bottom: var(--tz-border-2);
-    font-weight: 700;
+    font-variation-settings: var(
+      --tz-typography-200-medium-font-variation-settings
+    );
+    font-weight: var(--tz-typography-200-medium-font-weight);
   }
 
   th,
@@ -251,7 +260,11 @@
 .callout--info,
 .callout--tip,
 .callout--note {
-  background-color: color-mix(in oklab, var(--tz-color-base-blue-800), transparent 62.5%);
+  background-color: color-mix(
+    in oklab,
+    var(--tz-color-base-blue-800),
+    transparent 62.5%
+  );
 
   .callout-indicator {
     color: var(--tz-color-base-blue-300);
@@ -260,7 +273,11 @@
 
 .callout--caution,
 .callout--warning {
-  background-color: color-mix(in oklab, var(--tz-color-base-orange-800), transparent 62.5%);
+  background-color: color-mix(
+    in oklab,
+    var(--tz-color-base-orange-800),
+    transparent 62.5%
+  );
 
   .callout-indicator {
     color: var(--tz-color-base-orange-300);
@@ -272,6 +289,9 @@
   display: flex;
   font-family: var(--tz-typography-200-bold-font-family);
   font-size: var(--tz-typography-200-bold-font-size);
+  font-variation-settings: var(
+    --tz-typography-200-bold-font-variation-settings
+  );
   font-weight: var(--tz-typography-200-bold-font-weight);
   gap: var(--tz-space-200);
   letter-spacing: var(--tz-typography-200-bold-letter-spacing);
@@ -310,6 +330,9 @@
   cursor: pointer;
   font-family: var(--tz-typography-200-regular-font-family);
   font-size: var(--tz-typography-200-regular-font-size);
+  font-variation-settings: var(
+    --tz-typography-200-regular-font-variation-settings
+  );
   font-weight: var(--tz-typography-200-regular-font-weight);
   height: var(--tz-space-control-m);
   letter-spacing: var(--tz-typography-200-regular-letter-spacing);
@@ -366,8 +389,12 @@
       --chrome-button-gap: calc(0.5 * var(--chrome-button-size));
       --y: calc(0.5 * var(--chrome-button-size));
       --x1: calc(0.5 * var(--chrome-button-size));
-      --x2: calc(var(--x1) + var(--chrome-button-size) + var(--chrome-button-gap));
-      --x3: calc(var(--x2) + var(--chrome-button-size) + var(--chrome-button-gap));
+      --x2: calc(
+        var(--x1) + var(--chrome-button-size) + var(--chrome-button-gap)
+      );
+      --x3: calc(
+        var(--x2) + var(--chrome-button-size) + var(--chrome-button-gap)
+      );
 
       background-image: radial-gradient(
           circle at var(--x1) var(--y),
@@ -417,8 +444,9 @@
   position: absolute;
   right: var(--tz-space-400);
   top: var(--tz-space-400);
-  transition: background-color var(--tz-timing-default) var(--tz-ease-linear), color var(--tz-timing-default)
-    var(--tz-ease-linear);
+  transition:
+    background-color var(--tz-timing-default) var(--tz-ease-linear),
+    color var(--tz-timing-default) var(--tz-ease-linear);
   width: var(--tz-space-control-m);
   z-index: var(--tz-layer-base);
 
