--- a/www/src/styles/app.css
+++ b/www/src/styles/app.css
@@ -3,7 +3,11 @@ html {
 }
 
 body {
-  --grid-color: color-mix(in oklab, var(--tz-color-base-blue-600), transparent 62.5%);
+  --grid-color: color-mix(
+    in oklab,
+    var(--tz-color-base-blue-600),
+    transparent 62.5%
+  );
   --grid-size: 2.5rem;
 
   background-color: var(--tz-color-bg-1);
@@ -13,7 +17,12 @@ body {
       var(--grid-color) calc(1 / 16 * 1rem),
       transparent calc(1 / 16 * 1rem)
     ),
-    linear-gradient(to right, var(--grid-color), var(--grid-color) calc(1 / 16 * 1rem), transparent calc(1 / 16 * 1rem));
+    linear-gradient(
+      to right,
+      var(--grid-color),
+      var(--grid-color) calc(1 / 16 * 1rem),
+      transparent calc(1 / 16 * 1rem)
+    );
   background-position: center calc(-1 / 16 * 1rem);
   background-repeat: repeat;
   background-size: var(--grid-size) var(--grid-size);
@@ -37,7 +46,11 @@ body {
   outline: 1px solid transparent;
 
   &:focus-visible {
-    outline-color: color-mix(in oklab, var(--tz-color-base-lime-800), transparent 50%);
+    outline-color: color-mix(
+      in oklab,
+      var(--tz-color-base-lime-800),
+      transparent 50%
+    );
   }
 }
 
@@ -50,27 +63,69 @@ body {
 }
 
 h1 {
-  font-size: var(--tz-typography-700-medium-font-size);
-  font-style: var(--tz-typography-700-medium-font-style);
-  font-weight: var(--tz-typography-700-medium-font-weight);
-  letter-spacing: var(--tz-typography-700-medium-letter-spacing);
-  line-height: var(--tz-typography-700-medium-line-height);
+  font-size: var(--tz-typography-700-bold-font-size);
+  font-style: var(--tz-typography-700-bold-font-style);
+  font-variation-settings: var(
+    --tz-typography-700-bold-font-variation-settings
+  );
+  font-weight: var(--tz-typography-700-bold-font-weight);
+  letter-spacing: var(--tz-typography-700-bold-letter-spacing);
+  line-height: var(--tz-typography-700-bold-line-height);
 }
 
 h2 {
-  font-size: var(--tz-typography-600-medium-font-size);
-  font-style: var(--tz-typography-600-medium-font-style);
-  font-weight: var(--tz-typography-600-medium-font-weight);
-  letter-spacing: var(--tz-typography-600-medium-letter-spacing);
-  line-height: var(--tz-typography-600-medium-line-height);
+  font-size: var(--tz-typography-600-bold-font-size);
+  font-style: var(--tz-typography-600-bold-font-style);
+  font-variation-settings: var(
+    --tz-typography-800-bold-font-variation-settings
+  );
+  font-weight: var(--tz-typography-600-bold-font-weight);
+  letter-spacing: var(--tz-typography-600-bold-letter-spacing);
+  line-height: var(--tz-typography-600-bold-line-height);
 }
 
 h3 {
   font-size: var(--tz-typography-500-medium-font-size);
   font-style: var(--tz-typography-500-medium-font-style);
+  font-variation-settings: var(
+    --tz-typography-500-medium-font-variation-settings
+  );
   font-weight: var(--tz-typography-500-medium-font-weight);
   letter-spacing: var(--tz-typography-500-medium-letter-spacing);
   line-height: var(--tz-typography-500-medium-line-height);
+}
+
+h4 {
+  font-size: var(--tz-typography-400-medium-font-size);
+  font-style: var(--tz-typography-400-medium-font-style);
+  font-variation-settings: var(
+    --tz-typography-400-medium-font-variation-settings
+  );
+  font-weight: var(--tz-typography-400-medium-font-weight);
+  letter-spacing: var(--tz-typography-400-medium-letter-spacing);
+  line-height: var(--tz-typography-400-medium-line-height);
+}
+
+h5 {
+  font-size: var(--tz-typography-300-medium-font-size);
+  font-style: var(--tz-typography-300-medium-font-style);
+  font-variation-settings: var(
+    --tz-typography-300-medium-font-variation-settings
+  );
+  font-weight: var(--tz-typography-300-medium-font-weight);
+  letter-spacing: var(--tz-typography-300-medium-letter-spacing);
+  line-height: var(--tz-typography-300-medium-line-height);
+}
+
+h6 {
+  font-size: var(--tz-typography-200-medium-font-size);
+  font-style: var(--tz-typography-200-medium-font-style);
+  font-variation-settings: var(
+    --tz-typography-200-medium-font-variation-settings
+  );
+  font-weight: var(--tz-typography-200-medium-font-weight);
+  letter-spacing: var(--tz-typography-200-medium-letter-spacing);
+  line-height: var(--tz-typography-200-medium-line-height);
 }
 
 p,
@@ -99,6 +154,12 @@ a {
 mark {
   background-color: var(--tz-nav-primary-selected-bg);
   color: var(--tz-nav-primary-selected-text);
+}
+
+b,
+strong {
+  font-variation-settings: "wght" 700;
+  font-weight: 400;
 }
 
 .gh-user {
