Minor docs tweak

--- a/www/src/components/illo/home.astro
+++ b/www/src/components/illo/home.astro
@@ -29,8 +29,8 @@ import Tri from '../tri.astro';
 
 <style>
   .illo {
-    pointer-events: none;
     position: relative;
+    user-select: none;
   }
 
   .rect {
