--- a/packages/token-lab/src/components/main-nav/main-nav.module.css
+++ b/packages/token-lab/src/components/main-nav/main-nav.module.css
@@ -1,13 +1,15 @@
-.logo {
-  height: 1.25rem;
-  width: 1.25cqi;
-}
-
 .header {
   align-items: center;
   border-bottom: var(--tz-border-3);
   display: flex;
-  padding: 0.75rem;
+  height: 3rem;
+  user-select: none;
+}
+
+.logo {
+  height: 1.25rem;
+  margin-inline-start: 1rem;
+  width: 1.25rem;
 }
 
 .codePanel {
@@ -19,5 +21,5 @@
   font-weight: 800;
   line-height: 1;
   margin: 0;
-  padding-inline-start: 0.5rem;
+  padding-inline-start: 0.375rem;
 }
