--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -1,5 +1,5 @@
 ---
-import { getAriaCurrent } from '../lib/navigation';
+import { getAriaCurrent } from '../lib/navigation.js';
 import Terrazzo from './terrazzo.astro';
 
 const NAV_ITEMS = [
