--- a/www/src/styles/app.css
+++ b/www/src/styles/app.css
@@ -3,11 +3,7 @@ html {
 }
 
 body {
-  --grid-color: color-mix(
-    in oklab,
-    var(--tz-color-base-blue-600),
-    transparent 62.5%
-  );
+  --grid-color: color-mix(in oklab, var(--tz-color-base-blue-600), transparent 62.5%);
   --grid-size: 2.5rem;
 
   background-color: var(--tz-color-bg-1);
@@ -17,12 +13,7 @@ body {
       var(--grid-color) calc(1 / 16 * 1rem),
       transparent calc(1 / 16 * 1rem)
     ),
-    linear-gradient(
-      to right,
-      var(--grid-color),
-      var(--grid-color) calc(1 / 16 * 1rem),
-      transparent calc(1 / 16 * 1rem)
-    );
+    linear-gradient(to right, var(--grid-color), var(--grid-color) calc(1 / 16 * 1rem), transparent calc(1 / 16 * 1rem));
   background-position: center calc(-1 / 16 * 1rem);
   background-repeat: repeat;
   background-size: var(--grid-size) var(--grid-size);
@@ -46,11 +37,7 @@ body {
   outline: 1px solid transparent;
 
   &:focus-visible {
-    outline-color: color-mix(
-      in oklab,
-      var(--tz-color-base-lime-800),
-      transparent 50%
-    );
+    outline-color: color-mix(in oklab, var(--tz-color-base-lime-800), transparent 50%);
   }
 }
 
@@ -66,9 +53,7 @@ body {
 h1 {
   font-size: var(--tz-typography-700-bold-font-size);
   font-style: var(--tz-typography-700-bold-font-style);
-  font-variation-settings: var(
-    --tz-typography-700-bold-font-variation-settings
-  );
+  font-variation-settings: var(--tz-typography-700-bold-font-variation-settings);
   font-weight: var(--tz-typography-700-bold-font-weight);
   letter-spacing: var(--tz-typography-700-bold-letter-spacing);
   line-height: var(--tz-typography-700-bold-line-height);
@@ -77,9 +62,7 @@ h1 {
 h2 {
   font-size: var(--tz-typography-600-bold-font-size);
   font-style: var(--tz-typography-600-bold-font-style);
-  font-variation-settings: var(
-    --tz-typography-800-bold-font-variation-settings
-  );
+  font-variation-settings: var(--tz-typography-800-bold-font-variation-settings);
   font-weight: var(--tz-typography-600-bold-font-weight);
   letter-spacing: var(--tz-typography-600-bold-letter-spacing);
   line-height: var(--tz-typography-600-bold-line-height);
@@ -88,9 +71,7 @@ h2 {
 h3 {
   font-size: var(--tz-typography-500-medium-font-size);
   font-style: var(--tz-typography-500-medium-font-style);
-  font-variation-settings: var(
-    --tz-typography-500-medium-font-variation-settings
-  );
+  font-variation-settings: var(--tz-typography-500-medium-font-variation-settings);
   font-weight: var(--tz-typography-500-medium-font-weight);
   letter-spacing: var(--tz-typography-500-medium-letter-spacing);
   line-height: var(--tz-typography-500-medium-line-height);
@@ -99,9 +80,7 @@ h3 {
 h4 {
   font-size: var(--tz-typography-400-medium-font-size);
   font-style: var(--tz-typography-400-medium-font-style);
-  font-variation-settings: var(
-    --tz-typography-400-medium-font-variation-settings
-  );
+  font-variation-settings: var(--tz-typography-400-medium-font-variation-settings);
   font-weight: var(--tz-typography-400-medium-font-weight);
   letter-spacing: var(--tz-typography-400-medium-letter-spacing);
   line-height: var(--tz-typography-400-medium-line-height);
@@ -110,9 +89,7 @@ h4 {
 h5 {
   font-size: var(--tz-typography-300-medium-font-size);
   font-style: var(--tz-typography-300-medium-font-style);
-  font-variation-settings: var(
-    --tz-typography-300-medium-font-variation-settings
-  );
+  font-variation-settings: var(--tz-typography-300-medium-font-variation-settings);
   font-weight: var(--tz-typography-300-medium-font-weight);
   letter-spacing: var(--tz-typography-300-medium-letter-spacing);
   line-height: var(--tz-typography-300-medium-line-height);
@@ -121,9 +98,7 @@ h5 {
 h6 {
   font-size: var(--tz-typography-200-medium-font-size);
   font-style: var(--tz-typography-200-medium-font-style);
-  font-variation-settings: var(
-    --tz-typography-200-medium-font-variation-settings
-  );
+  font-variation-settings: var(--tz-typography-200-medium-font-variation-settings);
   font-weight: var(--tz-typography-200-medium-font-weight);
   letter-spacing: var(--tz-typography-200-medium-letter-spacing);
   line-height: var(--tz-typography-200-medium-line-height);
