--- a/packages/react-color-picker/src/components/ColorChannelSlider.css
+++ b/packages/react-color-picker/src/components/ColorChannelSlider.css
@@ -6,7 +6,7 @@
 
   &::after {
     border-radius: var(--tz-color-channel-slider-track-height);
-    box-shadow: inset 0 0 0 1px rgb(0 0 0/0.2);
+    box-shadow: inset 0 0 0 1px rgb(0 0 0 / 0.2);
     content: "";
     inset: 0;
     pointer-events: none;
@@ -24,16 +24,10 @@
   --tz-square-color: var(--tz-color-base-gray-800);
   --tz-square-size: calc(0.625 * var(--tz-color-channel-slider-track-height));
 
-  background-image: linear-gradient(
-      to right,
-      var(--left-color),
-      var(--right-color)
-    ),
+  background-image: linear-gradient(to right, var(--left-color), var(--right-color)),
     url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect fill='%23dad9d6' width='32' height='32'/><rect fill='%23dad9d6' x='32' y='32' width='32' height='32'/></svg>");
   background-repeat: no-repeat, repeat;
-  background-size:
-    100% 100%,
-    var(--tz-square-size) var(--tz-square-size);
+  background-size: 100% 100%, var(--tz-square-size) var(--tz-square-size);
 }
 
 .tz-color-channel-slider-bg-wrapper {
