--- a/packages/tiles/src/Slider/Slider.css
+++ b/packages/tiles/src/Slider/Slider.css
@@ -27,10 +27,7 @@
 
 .tz-slider-handle {
   --border-size: 1px;
-  --handle-offset: calc(
-    var(--tz-slider-handle-size) - var(--tz-slider-track-size-block) -
-      (2 * var(--border-size))
-  );
+  --handle-offset: calc(var(--tz-slider-handle-size) - var(--tz-slider-track-size-block) - (2 * var(--border-size)));
 
   background: var(--tz-color-bg-1);
   border-color: var(--tz-color-border-2);
@@ -55,17 +52,13 @@
     left: 50%;
     top: auto;
     touch-action: pan-y;
-    transform: translate3d(
-      -50%,
-      calc(-1 * var(--tz-slider-handle-position)),
-      0
-    );
+    transform: translate3d(-50%, calc(-1 * var(--tz-slider-handle-position)), 0);
   }
 
   &[data-variant="color"]::after {
     background-color: var(--tz-slider-handle-color);
     border-radius: var(--tz-slider-handle-size);
-    box-shadow: inset 0 0 0 1px rgb(0 0 0/0.2);
+    box-shadow: inset 0 0 0 1px rgb(0 0 0 / 0.2);
     content: "";
     display: block;
     height: var(--tz-slider-track-size-block);
